apps/reise-blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: reise-blog
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
