apps/reise-blog/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reise-blog
  namespace: reise-blog
spec:
  rules:
  - host: reise-blog.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service: 
            name: wordpress
            port: 
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - reise-blog.${SECRET_DOMAIN}
